[tool.poetry]
name = "mock-api"
version = "0.1.0"
description = ""
authors = ["Kazuki Matsumaru <marukaz.jh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
